[package]
name = "crate-race"
version = "0.5.0"
authors = ["Veniamin Ilmer"]
edition = "2018"

[dependencies]
bencher = "*"
regex = "*"

#big_nums
num-bigint = "*"
num-traits = "*"  #Used by bigint code
uint = "*"
numext-fixed-uint = "*"

#string find
memchr = "*"
jetscii = "*"
galil-seiferas = "*"
twoway = "*"
aho-corasick = "*"
subslice = "*"

#csv
csv = "*"
quick-csv = "*"
simple_csv = "*"

#json
json = "*"
serde_json = "*"
json5 = "*"
json_in_type = "*"

#md5
md5 = "*"
md_5 = { version = "*", package = "md-5" }

[[bench]]
name = "bigint_multiplication"
path = "benches/bigint_multiplication/bench.rs"
harness = false

[[bench]]
name = "bigint_parsestr"
path = "benches/bigint_parsestr/bench.rs"
harness = false

[[bench]]
name = "csv_parse"
path = "benches/csv_parse/bench.rs"
harness = false

[[bench]]
name = "json_build"
path = "benches/json_build/bench.rs"
harness = false

[[bench]]
name = "json_parse"
path = "benches/json_parse/bench.rs"
harness = false

[[bench]]
name = "md5"
path = "benches/md5/bench.rs"
harness = false

[[bench]]
name = "string_findchar"
path = "benches/string_findchar/bench.rs"
harness = false

[[bench]]
name = "string_findsubstring"
path = "benches/string_findsubstring/bench.rs"
harness = false