[package]
name = "crate-race"
version = "0.8.0"
authors = ["Veniamin Ilmer"]
edition = "2018"

[dependencies]
#Used internally for benchmarking..
bencher = "*"
regex = "*"

#big_nums
num-bigint = "*"
num-traits = "*"  #Used by bigint code
uint = "*"
numext-fixed-uint = "*"

#csv
csv = "*"
quick-csv = "*"
simple_csv = "*"

#json
json = "*"
serde_json = "*"
json5 = "*"
json_in_type = "*"

#linear algebra
nalgebra = "*"
rulinalg = "*"
ndarray = "*"
cgmath = "*"
vek = "*"

#md5
md5 = "*"
md_5 = { version = "*", package = "md-5" }

#string find
memchr = "*"
jetscii = "*"
galil-seiferas = "*"
twoway = "*"
subslice = "*"
algos = "*"

#vec sort
rand = "*"  #Used to shuffle an array for benchmarking later

[[bench]]
name = "bigint_arithmetic"
path = "benches/bigint_arithmetic/bench.rs"
harness = false

[[bench]]
name = "bigint_parsestr"
path = "benches/bigint_parsestr/bench.rs"
harness = false

[[bench]]
name = "csv_parse"
path = "benches/csv_parse/bench.rs"
harness = false

[[bench]]
name = "json_build"
path = "benches/json_build/bench.rs"
harness = false

[[bench]]
name = "json_parse"
path = "benches/json_parse/bench.rs"
harness = false

[[bench]]
name = "mathvector_dotproduct"
path = "benches/mathvector_dotproduct/bench.rs"
harness = false

[[bench]]
name = "md5_hash"
path = "benches/md5_hash/bench.rs"
harness = false

[[bench]]
name = "string_findbyte"
path = "benches/string_findbyte/bench.rs"
harness = false

[[bench]]
name = "string_findsubstring"
path = "benches/string_findsubstring/bench.rs"
harness = false
