[package]
name = "crate-race"
version = "1.1.3"
authors = ["Veniamin Ilmer"]
edition = "2018"
license = "Apache-2.0"
description = "Comparing Rust crate function speeds"
readme = "Readme.md"
repository = "https://github.com/veniamin-ilmer/crate-race"

[dependencies]
#Used internally for benchmarking..
bencher = "0.1.5"
regex = "1.1.0"

#big_nums
num-bigint = "0.2.2"
num-traits = "0.2.6"
uint = "0.5.0"
numext-fixed-uint = "0.1.2"

#csv
csv = "1.0.5"
quick-csv = "0.1.6"
simple_csv = "0.0.15"

#json
json = "0.11.13"
serde_json = "1.0.34"
json5 = "0.2.2"
json_in_type = "1.0.0"

#linear algebra
nalgebra = "0.16.13"
rulinalg = "0.4.2"
ndarray = "0.12.1"
cgmath = "0.16.1"
vek = "0.9.5"

#md5
md5 = "0.6.1"
md_5 = { version = "0.8.0", package = "md-5" }

#random
rand_chacha = "0.1.1"
rand_isaac = "0.1.1"
rand_xorshift = "0.1.1"
rand_hc = "0.1.0"
rand_pcg = "0.1.1"

#string find
galil-seiferas = "0.1.5"
jetscii = "0.4.3"
memchr = "2.1.2"
subslice = "0.2.0"
twoway = "0.2.0"

#vec sort int
rand = "0.6.4"
afsort = "0.3.0"
cycle-sort = "0.2.0"
dmsort = "1.0.0"
ironsort = "0.1.0"
quick_sort = "0.2.1"
rdxsort = "0.3.0"
rust_quicksort = "0.1.0"
sortrs = "0.0.5"

#xml
dummy_xml = "0.1.6"
quick-xml = "0.13.1"
roxmltree = "0.4.1"
xmltree = "0.8.0"
treexml = "0.7.0"
nv-xml = "0.1.3"

[[bench]]
name = "bigint_arithmetic"
path = "benches/bigint_arithmetic/bench.rs"
harness = false

[[bench]]
name = "bigint_parsestr"
path = "benches/bigint_parsestr/bench.rs"
harness = false

[[bench]]
name = "csv_parse"
path = "benches/csv_parse/bench.rs"
harness = false

[[bench]]
name = "json_build"
path = "benches/json_build/bench.rs"
harness = false

[[bench]]
name = "json_parse"
path = "benches/json_parse/bench.rs"
harness = false

[[bench]]
name = "mathvector_dotproduct"
path = "benches/mathvector_dotproduct/bench.rs"
harness = false

[[bench]]
name = "md5_hash"
path = "benches/md5_hash/bench.rs"
harness = false

[[bench]]
name = "random_shuffle"
path = "benches/random_shuffle/bench.rs"
harness = false

[[bench]]
name = "string_findbyte"
path = "benches/string_findbyte/bench.rs"
harness = false

[[bench]]
name = "string_findsubstring"
path = "benches/string_findsubstring/bench.rs"
harness = false

[[bench]]
name = "vec_intsort"
path = "benches/vec_intsort/bench.rs"
harness = false

[[bench]]
name = "xml_parse"
path = "benches/xml_parse/bench.rs"
harness = false
